--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+
+
 	<groupId>com.springboot</groupId>
 	<artifactId>spring-boot-rest-example</artifactId>
 	<version>0.5.0</version>
 	<description>Example project demonstrating REST APIs implemented using Spring Boot, in-memory database, embedded Tomcat, Swagger, JsonPath, Hamcrest and MockMVC</description>
+
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -14,12 +17,13 @@
 		<version>2.2.6.RELEASE</version>
 	</parent>
 
+
 	<properties>
-		<start-class>com.springboot.example.Application</start-class>
+		<start-class>hotelApplication.Application</start-class>
 	</properties>
 
-	<dependencies>
 
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
